--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automated Parking Slot App",
   "main": "Gruntfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":""
   },
   "author": "Bharath Kumar",
   "license": "ISC",
